--- a/src/app.json
+++ b/src/app.json
@@ -33,13 +33,13 @@
         "selectedIconPath": "static/tabs/home_current.png"
       },
       {
-        "text": "预约",
+        "text": "运势",
         "pagePath": "pages/queue/main",
         "iconPath": "static/images/yuyue.png",
         "selectedIconPath": "static/images/yuyue-2.png"
       },
       {
-        "text": "读书笔记",
+        "text": "已开奖",
         "pagePath": "pages/notes/main",
         "iconPath": "static/tabs/orders.png",
         "selectedIconPath": "static/tabs/orders_current.png"
