--- a/src/app.json
+++ b/src/app.json
@@ -1,17 +1,12 @@
 {
   "pages": [
     "pages/index/main",
-    "pages/addNotes/main",
     "pages/about/main",
-    "pages/notes/main",
-    "pages/applyQrcode/main",
-    "pages/kind/main",
+    "pages/fortune/main",
     "pages/user/main",
-    "pages/appointment/main",
-    "pages/queue/main",
-    "pages/mybook/main",
-    "pages/queueOrderList/main",
-    "pages/infForm/main"
+    "pages/dprize/main",
+    "pages/lotteryList/main",
+    "pages/mylottery/main"
   ],
   "window": {
     "backgroundTextStyle": "dark",
@@ -34,13 +29,13 @@
       },
       {
         "text": "运势",
-        "pagePath": "pages/queue/main",
+        "pagePath": "pages/fortune/main",
         "iconPath": "static/images/yuyue.png",
         "selectedIconPath": "static/images/yuyue-2.png"
       },
       {
         "text": "已开奖",
-        "pagePath": "pages/notes/main",
+        "pagePath": "pages/lotteryList/main",
         "iconPath": "static/tabs/orders.png",
         "selectedIconPath": "static/tabs/orders_current.png"
       },
