--- a/project.config.json
+++ b/project.config.json
@@ -9,11 +9,11 @@
         "minified": true,
         "newFeature": true,
         "coverView": true,
-        "nodeModules": true,
+        "nodeModules": false,
         "autoAudits": false,
         "showShadowRootInWxmlPanel": true,
         "scopeDataCheck": false,
-        "uglifyFileName": true,
+        "uglifyFileName": false,
         "checkInvalidKey": true,
         "checkSiteMap": true,
         "uploadWithSourceMap": true,
@@ -34,14 +34,14 @@
         "packNpmRelationList": [],
         "minifyWXSS": true,
         "disableUseStrict": false,
+        "minifyWXML": true,
         "showES6CompileOption": false,
-        "useCompilerPlugins": false,
-        "minifyWXML": true
+        "useCompilerPlugins": false
     },
     "miniprogramRoot": "dist/wx/",
     "compileType": "miniprogram",
     "appid": "wxf18ea67803d92fcd",
-    "projectname": "libraryxlx",
+    "projectname": "welfareLottery",
     "simulatorType": "wechat",
     "simulatorPluginLibVersion": {},
     "condition": {
