--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "mpvueTemplateProjectVersion": "0.1.0",
   "description": "A Mpvue project",
-  "author": "hll <2738489020@qq.com>",
+  "author": "lhs",
   "private": true,
   "scripts": {
     "dev:wx": "node build/dev-server.js wx",
