--- a/project.private.config.json
+++ b/project.private.config.json
@@ -1,191 +1,114 @@
 {
-  "description": "项目配置文件，详见文档：https://developers.weixin.qq.com/miniprogram/dev/devtools/projectconfig.html",
-  "setting": {
-    "urlCheck": false,
-    "es6": true,
-    "enhance": true,
-    "postcss": false,
-    "preloadBackgroundData": false,
-    "minified": true,
-    "newFeature": true,
-    "coverView": true,
-    "nodeModules": false,
-    "autoAudits": false,
-    "showShadowRootInWxmlPanel": true,
-    "scopeDataCheck": false,
-    "uglifyFileName": false,
-    "checkInvalidKey": true,
-    "checkSiteMap": true,
-    "uploadWithSourceMap": true,
-    "compileHotReLoad": false,
-    "lazyloadPlaceholderEnable": false,
-    "useMultiFrameRuntime": true,
-    "useApiHook": true,
-    "useApiHostProcess": true,
-    "babelSetting": {
-      "ignore": [],
-      "disablePlugins": [],
-      "outputPath": ""
-    },
-    "enableEngineNative": false,
-    "useIsolateContext": true,
-    "userConfirmedBundleSwitch": false,
-    "packNpmManually": false,
-    "packNpmRelationList": [],
-    "minifyWXSS": true,
-    "disableUseStrict": false,
-    "minifyWXML": true,
-    "showES6CompileOption": false,
-    "useCompilerPlugins": false,
-    "useStaticServer": true
-  },
-  "miniprogramRoot": "dist/wx/",
-  "compileType": "miniprogram",
-  "appid": "wxf18ea67803d92fcd",
-  "projectname": "welfareLottery",
-  "simulatorType": "wechat",
-  "simulatorPluginLibVersion": {},
   "condition": {
-    "search": {
-      "list": []
-    },
-    "conversation": {
-      "list": []
-    },
-    "plugin": {
-      "list": []
-    },
-    "game": {
-      "currentL": -1,
-      "list": []
-    },
-    "gamePlugin": {
-      "list": []
-    },
     "miniprogram": {
       "list": [
         {
-          "id": -1,
           "name": "pages/kind/main",
           "pathName": "pages/kind/main",
           "query": "kind",
           "scene": null
         },
         {
-          "id": -1,
           "name": "pages/productDetail/main",
           "pathName": "pages/productDetail/main",
           "query": "detail",
           "scene": null
         },
         {
-          "id": -1,
           "name": "pages/cart/main",
           "pathName": "pages/cart/main",
           "query": "cart",
           "scene": null
         },
         {
-          "id": -1,
           "name": "pages/order/main",
           "pathName": "pages/order/main",
           "query": "order",
           "scene": null
         },
         {
-          "id": -1,
           "name": "pages/orderDetail/main",
           "pathName": "pages/orderDetail/main",
           "query": "orderDetail",
           "scene": null
         },
         {
-          "id": -1,
           "name": "pages/orderStatus/main",
           "pathName": "pages/orderStatus/main",
           "query": "orderStatus",
           "scene": null
         },
         {
-          "id": -1,
           "name": "pages/orderCreator/main",
           "pathName": "pages/orderCreator/main",
           "query": "orderCreator",
           "scene": null
         },
         {
-          "id": -1,
           "name": "pages/orderPaid/main",
           "pathName": "pages/orderPaid/main",
           "query": "orderPaid",
           "scene": null
         },
         {
-          "id": -1,
           "name": "pages/supplierDetail/main",
           "pathName": "pages/supplierDetail/main",
           "query": "supplierDetail",
           "scene": null
         },
         {
-          "id": -1,
           "name": "pages/supplierInf/main",
           "pathName": "pages/supplierInf/main",
           "query": "supplierInf",
           "scene": null
         },
         {
-          "id": 10,
           "name": "pages/restaurant/main",
           "pathName": "pages/restaurant/main",
           "query": "scene=shopId%3D1218817488335147008",
           "scene": null
         },
         {
-          "id": -1,
           "name": "pages/user/main",
           "pathName": "pages/user/main",
           "query": "scene=shopId%3D1213022561416253440",
           "scene": null
         },
         {
-          "id": -1,
           "name": "pages/user/main",
           "pathName": "pages/user/main",
           "query": "scene=shopId%3D1218817488335147008",
           "scene": null
         },
         {
-          "id": -1,
           "name": "pages/addNotes/main",
           "pathName": "pages/addNotes/main",
           "query": "",
           "scene": null
         },
         {
-          "id": -1,
           "name": "pages/applyQrcode/main",
           "pathName": "pages/applyQrcode/main",
           "query": "",
           "scene": null
         },
         {
-          "id": -1,
           "name": "pages/order/main",
           "pathName": "pages/order/main",
+          "query": "",
+          "scene": null
+        },
+        {
+          "name": "pages/lucky/main",
+          "pathName": "pages/lucky/main",
+          "query": "",
           "scene": null
         }
       ]
     }
   },
-  "libVersion": "2.18.0",
-  "srcMiniprogramRoot": "dist/wx/",
-  "packOptions": {
-    "ignore": [],
-    "include": []
-  },
-  "editorSetting": {
-    "tabIndent": "insertSpaces",
-    "tabSize": 2
+  "description": "项目私有配置文件。此文件中的内容将覆盖 project.config.json 中的相同字段。项目的改动优先同步到此文件中。详见文档：https://developers.weixin.qq.com/miniprogram/dev/devtools/projectconfig.html",
+  "setting": {
+    "urlCheck": true
   }
 }
