--- a/src/app.json
+++ b/src/app.json
@@ -7,6 +7,7 @@
     "pages/dprize/main",
     "pages/lotteryList/main",
     "pages/mylottery/main",
+    "pages/awarding/main",
     "pages/lucky/main"
   ],
   "window": {
