--- a/package.json
+++ b/package.json
@@ -24,17 +24,21 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "@vant/weapp": "^1.10.8",
     "axios": "^0.18.0",
     "moment": "^2.24.0",
     "mpvue": "^2.0.0",
     "timetables": "^1.1.0",
+    "vant": "^2.12.53",
     "vant-weapp": "^0.4.10",
     "vuex": "^3.0.1",
     "weapp-cookie": "^1.3.7"
   },
   "devDependencies": {
     "babel-core": "^6.22.1",
+    "babel-eslint": "^8.2.3",
     "babel-loader": "^7.1.1",
+    "babel-plugin-import": "^1.13.5",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
@@ -45,57 +49,56 @@
     "css-loader": "^0.28.11",
     "cssnano": "^3.10.0",
     "eslint": "^4.19.1",
+    "eslint-config-standard": "^11.0.0",
     "eslint-friendly-formatter": "^4.0.1",
     "eslint-loader": "^2.0.0",
+    "eslint-plugin-html": "^4.0.3",
     "eslint-plugin-import": "^2.11.0",
     "eslint-plugin-node": "^6.0.1",
-    "eslint-plugin-html": "^4.0.3",
-    "eslint-config-standard": "^11.0.0",
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-standard": "^3.0.1",
-    "babel-eslint": "^8.2.3",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.16.3",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.11",
+    "flyio": "^0.6.7",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "glob": "^7.1.2",
     "html-webpack-plugin": "^3.2.0",
     "http-proxy-middleware": "^0.18.0",
+    "minapp-api-promise": "^1.0.2",
+    "mkdirp": "^0.5.1",
+    "mpvue-entry": "^1.5.0",
+    "mpvue-loader": "^2.0.0",
+    "mpvue-router-patch": "^0.2.1",
+    "mpvue-template-compiler": "^2.0.0",
+    "mpvue-webpack-target": "^1.0.3",
+    "node-sass": "^4.11.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^2.0.0",
     "portfinder": "^1.0.13",
     "postcss-loader": "^2.1.4",
     "postcss-mpvue-wxss": "^1.0.0",
     "prettier": "~1.12.1",
+    "pug": "^2.0.3",
+    "pug-loader": "^2.4.0",
     "px2rpx-loader": "^0.1.10",
     "relative": "^3.0.2",
     "rimraf": "^2.6.0",
+    "sass-loader": "^7.1.0",
     "semver": "^5.3.0",
     "shelljs": "^0.8.1",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2",
     "uglifyjs-webpack-plugin": "^1.2.5",
     "url-loader": "^1.0.1",
     "vue-style-loader": "^4.1.0",
-    "mkdirp": "^0.5.1",
-    "mpvue-loader": "^2.0.0",
-    "mpvue-template-compiler": "^2.0.0",
-    "mpvue-webpack-target": "^1.0.3",
-    "webpack-mpvue-vendor-plugin": "^2.0.0",
-    "webpack-mpvue-asset-plugin": "^2.0.0",
+    "webpack": "^3.11.0",
     "webpack-bundle-analyzer": "^2.2.1",
     "webpack-dev-middleware-hard-disk": "^1.12.0",
     "webpack-merge": "^4.1.0",
-    "webpack": "^3.11.0",
-    "flyio": "^0.6.7",
-    "minapp-api-promise": "^1.0.2",
-    "mpvue-router-patch": "^0.2.1",
-    "mpvue-entry": "^1.5.0",
-    "node-sass": "^4.11.0",
-    "pug": "^2.0.3",
-    "pug-loader": "^2.4.0",
-    "sass-loader": "^7.1.0",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.2"
+    "webpack-mpvue-asset-plugin": "^2.0.0",
+    "webpack-mpvue-vendor-plugin": "^2.0.0"
   },
   "engines": {
     "node": ">= 4.0.0",
